--- a/assets/src/blocks/modules/header/header.html
+++ b/assets/src/blocks/modules/header/header.html
@@ -1,26 +1,38 @@
 <header>
-
-    <div class="logo">
-        <img src="img/logo.svg" alt="">
+    <div class="header-wrap">
+        <div class="logo">
+            <img src="img/logo.svg" alt="">
+        </div>
+        <div class="main-menu">
+            <ul class="main-menu__ul">
+                <li class="main-menu__li">JavaScript</li>
+                <li class="main-menu__li">PHP</li>
+                <li class="main-menu__li">Pyton</li>
+                <li class="main-menu__li">SQL</li>
+                <li class="main-menu__li">Linux</li>
+                <li class="main-menu__li">Linux</li>
+            </ul>
+        </div>
+        <div class="auth">
+            <button type="button" class="auth__btn">Регистрация</button>
+            <button type="button" class="auth__btn">Войти</button>
+        </div>
+        <span class="hr"></span>
     </div>
-
-    <div class="main-menu">
-        <ul class="main-menu__ul">
-            <li class="main-menu__li">JavaScript</li>
-            <li class="main-menu__li">PHP</li>
-            <li class="main-menu__li">Pyton</li>
-            <li class="main-menu__li">SQL</li>
-            <li class="main-menu__li">Linux</li>
-        </ul>
+    <!-- /. header-wrap-->
+    <div class="social-wrap">
+        <div class="search">
+            <input class="input__search" type="text" placeholder="Поиск...">
+            <button class="search__button">Искать</button>
+        </div>
+        <div class="social">
+            <a href=""><img class="social__img" src="img/social/vk-social-logotype.svg" alt=""></a>
+            <a href=""><img class="social__img" src="img/social/instagram.svg" alt=""></a>
+            <a href=""><img class="social__img" src="img/social/telegram.svg" alt=""></a>
+            <a href=""><img class="social__img" src="img/social/facebook.svg" alt=""></a>
+        </div>
     </div>
-
-    <div class="auth">
-        <button type="button" class="auth__btn">Регистрация</button>
-        <button type="button" class="auth__btn">Войти</button>
-    </div>
-
-    <span class="hr"></span>
-
+    <!-- /.social-wrap-->
     <div class="main-menuBottom">
         <ul class="main-menuBottom__ul">
             <li class="main-menuBottom__li">Верстка</li>
@@ -32,5 +44,5 @@
             <li class="main-menuBottom__li">React.js</li>
         </ul>
     </div>
-
+    <!-- /.main-menuBottom-->
 </header>
